fixed text-align

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -37,7 +37,7 @@ only screen and (max-width: 760px),
 	}
 
 	.margin {
-		text-align: center;
+		text-align: right;
 		margin-bottom: 10px;
 	}
 
